[tool.poetry]
name = "pydantic-surql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"

[tool.poetry.scripts]
test = "tests:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
