[tool.poetry]
name = "pydantic-surql"
version = "1.0.1"
description = "Pydantic Surql is a utility set to automatically convert Pydantic models to SURQL SDL definitions."
authors = ["Nathan Schwarz <nathan.schwarz.pro@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nathanschwarz/pydantic-SURQL"
keywords = ["pydantic", "surql", "sdl", "schema", "schema definition language"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
